feat(groups): option to create public group
